# wilmes

./: .gitignore  LICENSE  README.rst  check-types  pyproject.toml  requirements-dev.txt  requirements-types.txt  requirements.in  requirements.txt  setup.cfg
mypy-stubs/bs4/: __init__.pyi  element.pyi
mypy-stubs/mechanicalsoup/: __init__.pyi  browser.pyi  form.pyi  stateful_browser.pyi
wilmes/: __init__.py  __main__.py  _bs_utils.py  _client.py  _email_unmangling.py  _emojis.py  _settings.py  _types.py
wilmes/tests/: test_email_unmangling.py
wilmessage/: __main__.py  _client.py
