[tool.poetry]
name = "wilmes"
version = "0.6.0"
description = "Message fetching library for a Finnish school site"
readme = "README.rst"
authors = ["Tuomas Suutari <tuomas@nepnep.net>"]
license = "MIT"
repository = "https://github.com/suutari/wilmes"
homepage = "https://github.com/suutari/wilmes"

[tool.poetry.scripts]
wilmes = "wilmes.__main__:main"

[tool.poetry.dependencies]
python = "^3.6"
mechanicalsoup = ">=0.8"
python-dateutil = "^2.0"
pytz = "*"

[tool.poetry.dev-dependencies]
# types
mypy = "^0.740.0"

# style
flake8 = "^3.7"
flake8-isort = "^2.7"
pep8-naming = "^0.9.1"

# util
ipython = "^7.9"
jedi = "^0.15.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
