[project]
name = "wilmes"
version = "0.11.2"
description = "Message fetching library for a Finnish school site"
readme = "README.rst"
authors = [{name="Tuomas Suutari", email="tuomas@nepnep.net"}]
license = {file = "LICENSE"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Communications",
    "Topic :: Software Development :: Libraries",
]
requires-python = ">=3.6"
dependencies = [
    "mechanicalsoup>=0.8",
    "python-dateutil>=2.0",
    "pytz",
]

[project.optional-dependencies]
dev = [
    # types
    "mypy",
    "types-pytz",
    "types-requests",
    "types-python-dateutil",

    # style
    "flake8",
    "flake8-isort",
    "pep8-naming",

    # util
    "ipython",
    "jedi",
]

[project.urls]
Homepage = "https://github.com/suutari/wilmes"
Repository = "https://github.com/suutari/wilmes"

[project.scripts]
wilmes = "wilmes.__main__:main"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true

[tool.mypy]
mypy_path = "mypy-stubs:../mypy-stubs"
files = "."
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_decorators = true
disallow_untyped_defs = true
no_implicit_optional = true
no_implicit_reexport = true
warn_redundant_casts = true
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = true
